Working for release 0.1