@@ -144,7 +144,6 @@
         <junit.version>5.10.0-M1</junit.version>
         <jna.version>5.13.0</jna.version>
         <jackson.version>2.15.2</jackson.version>
-        <jackson.map.version>1.3</jackson.map.version>
         <curve25519.version>1.1</curve25519.version>
         <classgraph.version>4.8.160</classgraph.version>
         <reflection.version>1.2</reflection.version>
@@ -186,13 +185,28 @@
                             <version>${protoc.version}</version>
                         </annotationProcessorPath>
                         <annotationProcessorPath>
+                            <groupId>org.checkerframework</groupId>
+                            <artifactId>checker</artifactId>
+                            <version>${checker.framework.version}</version>
+                        </annotationProcessorPath>
+                        <annotationProcessorPath>
                             <groupId>cc.jilt</groupId>
                             <artifactId>jilt</artifactId>
                             <version>${jilt.version}</version>
+                            <scope>provided</scope>
                         </annotationProcessorPath>
                     </annotationProcessorPaths>
-                    <compilerArgs>
-                        <compilerArg>-parameters</compilerArg>
+                    <fork>true</fork>
+                    <compilerArgs combine.children="append">
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <failOnError>true</failOnError>
                 </configuration>
@@ -264,12 +278,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-parameter-names</artifactId>
-            <version>2.15.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.auties00</groupId>
-            <artifactId>map-module</artifactId>
-            <version>${jackson.map.version}</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.auties00</groupId>
